# umbrella

./: .env.example  .gitignore  README.md  docker-compose.yml  run-ingest-with-host-download.sh
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: assessments.py  domains.py  model_configs.py  stats.py
backend/app/cli/: ingest.py  init_db.py
backend/app/core/: config.py
backend/app/db/: clickhouse.py
backend/app/models/: activity.py  assessment.py  model_config.py  stats.py
backend/app/services/: activity.py  assessment.py  ingest.py  llm_gateway.py  model_config.py  stats.py  volatility.py
backend/tests/: test_activity.py  test_assessment.py  test_ingest.py  test_llm_gateway.py  test_model_configs.py  test_stats.py  test_volatility.py
deploy/clickhouse/: config.xml  users.xml
docs/: architecture.md  local-deployment.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: AssessmentPanel.vue  DailyRankTable.vue  MetricCard.vue  ModelSettingsModal.vue  OverviewSidebar.vue  QueryPanel.vue  RankChart.vue  TopDomainsPanel.vue  VolatileDomainsPanel.vue
frontend/src/services/: activityApi.js  apiUtils.js  assessmentApi.js  modelConfigApi.js  statsApi.js
frontend/src/styles/: main.css
