[project]
name = "umbrella-activity-backend"
version = "0.1.0"
description = "FastAPI backend for querying historical Cisco Umbrella domain rankings."
requires-python = ">=3.11"
dependencies = [
    "clickhouse-connect>=0.8.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

